--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <div class="bg-yellow-400 w-1/2 h-1/4">Fraction width height</div>
     <div class="bg-purple-400 w-screen">Screen width</div>
     <!-- 9 boxes that are 20px wide by 24px tall and each box will be different blue color shades -->
-    <div class="w-5 h-6 bg-blue-000"></div>
     <div class="w-5 h-6 bg-blue-100"></div>
     <div class="w-5 h-6 bg-blue-200"></div>
     <div class="w-5 h-6 bg-blue-300"></div>
@@ -30,5 +29,54 @@
     <div class="w-5 h-6 bg-blue-700"></div>
     <div class="w-5 h-6 bg-blue-800"></div>
     <div class="w-5 h-6 bg-blue-900"></div>
+    <!-- Padding and margins-->
+    <div class="bg-red-500 m-4">margin 16px</div>
+    <div class="bg-blue-600 pl-5">padding left 1.25px</div>
+    <!-- font family--->
+    <div class="font-serif m-6">Font sans</div>
+    <!-- text-size from xs to 6xl--->
+    <div class="text-xs">Text size xs</div>
+    <div class="text-sm">Text size sm</div>
+    <div class="text-base">Text size base</div>
+    <div class="text-lg">Text size lg</div>
+    <div class="text-xl">Text size xl</div>
+    <div class="text-2xl">Text size 2xl</div>
+    <div class="text-3xl">Text size 3xl</div>
+    <div class="text-4xl">Text size 4xl</div>
+    <div class="text-5xl">Text size 5xl</div>
+    <div class="text-6xl">Text size 6xl</div>
+    <!-- text-align--->
+    <div class="text-left">Text align left</div>
+    <div class="text-center">Text align center</div>
+    <div class="text-right">Text align right</div>
+    <div class="text-justify">Text align justify</div>
+    <!-- text-color--->
+    <div class="bg-gray-300 text-red-500">Text color red</div>
+    <div class="text-blue-500">Text color blue</div>
+    <!-- italic and not-itlic -->
+    <div class="italic">Italic</div>
+    <div class="not-italic">Not italic</div>
+    <!-- font weight-->
+    <div class="mt-4 font-thin">Font thin</div>
+    <div class="font-light">Font light</div>
+    <div class="font-normal">Font normal</div>
+    <div class="font-medium">Font medium</div>
+    <div class="font-semibold">Font semibold</div>
+    <div class="font-bold normal-case">Font bold</div>
+    <div class="font-extrabold lowercase">Font extrabold</div>
+    <div class="font-black uppercase">Font black</div>
+    <!--leter spacing-->
+    <div class="mt-4 tracking-tighter">Tracking tighter</div>
+    <div class="tracking-tight">Tracking tight</div>
+    <div class="tracking-normal">Tracking normal</div>
+    <div class="tracking-wide">Tracking wide</div>
+    <div class="tracking-wider">Tracking wider</div>
+    <div class="tracking-widest">Tracking widest</div>
+    <!-- line height-->
+    <div class="mt-4 leading-tight">Leading tight</div>
+    <div class="leading-snug">Leading snug</div>
+    <div class="leading-normal">Leading normal</div>
+    <div class="leading-relaxed">Leading relaxed</div>
+    <div class="leading-loose">Leading loose</div>
   </body>
 </html>
