--- a/challange.html
+++ b/challange.html
@@ -38,5 +38,63 @@
     <button class="uppercase bg-blue-500 text-blue-200 m-2 px-2 py-2">
       Enroll now
     </button>
+    <br />
+    <-- Button Challenges --->
+    <div>
+      <button
+        class="
+          m-4
+          bg-blue-500
+          text-blue-200
+          px-4
+          py-2
+          border-l-8 border-blue-800
+          rounded-lg
+        "
+      >
+        Submit
+      </button>
+    </div>
+    <div>
+      <button class="m-4 px-2 py-1 text-red-400 border-2 border-red-300">
+        Cancel
+      </button>
+    </div>
+    <div>
+      <button
+        class="
+          m-4
+          px-2
+          py-1
+          bg-indigo-300
+          border-b-8 border-indigo-800
+          text-indigo-100
+        "
+      >
+        Save
+      </button>
+    </div>
+    <div>
+      <button class="m-4 border-2 px-8 py-3 text-indigo-800 rounded-full">
+        Buy now
+      </button>
+    </div>
+    <div>
+      <button
+        class="
+          m-4
+          px-3
+          py-2
+          font-serif
+          uppercase
+          border-4 border-orange-400
+          rounded-full
+          bg-orange-600
+          text-orange-200
+        "
+      >
+        Send Podcast
+      </button>
+    </div>
   </body>
 </html>
