--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="font-normal">Font normal</div>
     <div class="font-medium">Font medium</div>
     <div class="font-semibold">Font semibold</div>
-    <div class="font-bold normal-case">Font bold</div>
+    <div class="font-bold normalcase">Font bold</div>
     <div class="font-extrabold lowercase">Font extrabold</div>
     <div class="font-black uppercase">Font black</div>
     <!--leter spacing-->
@@ -78,5 +78,23 @@
     <div class="leading-normal">Leading normal</div>
     <div class="leading-relaxed">Leading relaxed</div>
     <div class="leading-loose">Leading loose</div>
+    <!--Border-->
+    <div class="bg-blue-300 w-20 h-20 m-8 border-l-8 border-red-300"></div>
+    <div
+      class="bg-blue-300 w-20 h-20 m-8 border-dotted border-r-8 border-red-300"
+    ></div> 
+    <div
+      class="bg-blue-300 w-20 h-20 m-8 border-double border-t-8 border-red-300"
+    ></div>
+    <div
+      class="bg-blue-300 w-20 h-20 m-8 border-dashed border-b-8 border-red-300"
+    ></div>
+    <!--Border Radious-->
+    <div
+      class="bg-blue-300 w-20 h-20 m-8 border-l-8 border-red-300 rounded-lg"
+    ></div>
+    <div class="bg-blue-300 w-20 h-20 m-8 border-t-8 border-red-300 rounded-b-sm"/></div>
+    <div
+      class="bg-blue-300 w-20 h-20 m-8 border-t-8 border-red-300 rounded-full"
   </body>
 </html>
