--- a/challange.html
+++ b/challange.html
@@ -38,5 +38,37 @@
     <button class="uppercase bg-blue-500 text-blue-200 m-2 px-2 py-2">
       Enroll now
     </button>
+    <div class="h-screen flex flex-wrap">
+      <div class="flex h-1/3 w-1/3">
+        <div class="bg-teal-100 m-2 w-screen flex justify-center items-center">
+          A
+        </div>
+      </div>
+
+      <div class="bg-teal-200 h-1/3 w-1/3 flex justify-center items-center">
+        B
+      </div>
+      <div class="bg-teal-300 h-1/3 w-1/3 flex justify-center items-center">
+        C
+      </div>
+      <div class="bg-teal-400 h-1/3 w-1/3 flex justify-center items-center">
+        D
+      </div>
+      <div class="bg-teal-500 h-1/3 w-1/3 flex justify-center items-center">
+        E
+      </div>
+      <div class="bg-teal-600 h-1/3 w-1/3 flex justify-center items-center">
+        F
+      </div>
+      <div class="bg-teal-700 h-1/3 w-1/3 flex justify-center items-center">
+        G
+      </div>
+      <div class="bg-teal-800 h-1/3 w-1/3 flex justify-center items-center">
+        H
+      </div>
+      <div class="bg-teal-900 h-1/3 w-1/3 flex justify-center items-center">
+        I
+      </div>
+    </div>
   </body>
 </html>
